# gfycat_uploader

./: .gitignore  Cargo.toml
src/: cli.rs  gui.rs  main.rs  upload.rs
