[package]
name = "gfycat_uploader"
version = "0.1.1"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]

[dependencies]
env_logger = "0.6.0"
failure = "0.1.5"
reqwest = "0.9.10"
rustyline = "3.0.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
structopt = "0.2.14"
azul = { git = "https://github.com/maps4print/azul" }
